--- a/src/index.css
+++ b/src/index.css
@@ -44,14 +44,9 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  opacity: 90%;
 }
 
 @media (prefers-color-scheme: light) {
