--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -6,6 +6,8 @@
     text-align: center;
     width: 100vw;
     justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
 /* ... styles for other sections */
