--- a/src/components/landing/cta-section/CtaSection.css
+++ b/src/components/landing/cta-section/CtaSection.css
@@ -1,6 +1,5 @@
 .cta-section {
     padding: 4rem 0;
-    background-color: #f5f5f5;
     text-align: center;
 }
 
@@ -8,6 +7,7 @@
     background-color: #007bff;
     color: #fff;
     padding: 1rem 2rem;
+    margin: 4vh 2vw;
     border: none;
     border-radius: 5px;
     font-weight: bold;
