--- a/src/components/landing/footer/Footer.css
+++ b/src/components/landing/footer/Footer.css
@@ -10,17 +10,23 @@
 .footer-content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    align-items: self-start;
     width: 100%;
     flex-wrap: wrap;
 }
 
 .footer-subtitle{
-    font-size : 3vw;
+    font-size : 2vw;
+    width: 20vw;
 }
-.social-media, .contact-info, .resources, .newsletter{
-    max-width: 25vw;!important;
+.newsletter{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+.social-media, .contact-info, .resources{
+    width: 30vw;
     display: flex;
     flex-direction: column;
 }
@@ -48,6 +54,7 @@
 .newsletter form {
     display: flex;
     align-items: center;
+    width: 25vw;
 }
 
 .newsletter input {
@@ -56,6 +63,7 @@
     border-radius: 5px;
     flex-grow: 1;
     margin-right: 0.5rem;
+
 }
 
 .newsletter button {
