--- a/src/components/code-assistant/CodeAssistant.css
+++ b/src/components/code-assistant/CodeAssistant.css
@@ -23,11 +23,11 @@
 }
 
 .codeInputForm {
-    width: 80%;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 2;
+    z-index: 1;
 }
 
 .codeInput {
