--- a/src/components/wiki-page/Chatbot.css
+++ b/src/components/wiki-page/Chatbot.css
@@ -32,16 +32,16 @@
 }
 
 .chat-option {
-  background-color: #000000;
+  background-color: #000000 !important;
   border: none;
-  padding: 15px;
-  font-size: 16px;
+  padding: 10px; 
+  font-size: 14px; /* Decreased font size */
   cursor: pointer;
   transition: transform 0.3s ease;
   border-radius: 8px;
 }
 
-.transparent-image{
+.transparent-image {
   opacity: 0%;
 }
 
@@ -53,29 +53,54 @@
   margin-top: 20px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .prompt-input {
-  padding: 10px;
-  font-size: 16px;
+  padding: 8px; /* Decreased padding */
+  font-size: 14px; /* Decreased font size */
   border-radius: 8px;
+  background-color: rgb(96, 101, 101);
   border: 1px solid #ddd;
-  width: 50%;
-  max-width: 600px;
+  width: 70%; /* Adjusted width */
+  max-width: 400px; /* Decreased max width */
+  margin-bottom: 10px; /* Adjusted margin */
 }
 
 .submit-button {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 8px 15px; /* Decreased padding */
+  font-size: 14px; /* Decreased font size */
   border: none;
-  background-color: #5cb85c;
+  background-color: #5cb85c !important;
   color: white;
   cursor: pointer;
+  width: 30%;
   border-radius: 8px;
-  margin-left: 10px;
+  margin-left: 0; /* Removed left margin */
 }
 
 .submit-button:hover {
-  background-color: #4cae4c;
+  background-color: #4cae4c !important;
 }
+
+.auto-fill-suggestion {
+  position: absolute;
+  color: rgb(139, 139, 139); /* Set the color to light gray */
+  font-size: 0.9em; /* Adjust font size if necessary */
+  margin-top: 8px; /* Adjust vertical position */
+  margin-left: 12px; /* Adjust horizontal position */
+  left: 0;
+}
+
+.prompt-input {
+  padding-top: 12px; /* Adjust as necessary to vertically center the text */
+  padding-bottom: 12px; /* Adjust as necessary to vertically center the text */
+}
+
+.prompt-container {
+  position: relative;
+}
+
+
+
