edited css for wiki, assistant, and landing and added new bg images

--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -1,6 +1,7 @@
 
 
 .landing-content {
+    background-image: url(../../assets/ai.png);
     background-color: #141d3f;
     color: #fff;
     text-align: center;
