--- a/src/components/wiki-page/Chatbot.css
+++ b/src/components/wiki-page/Chatbot.css
@@ -5,12 +5,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #141d3f;
-  transition: background 0.5s ease-in-out;
+  background-image: url(../../assets/wiki.png);
+  background-size: cover;
 }
 
 .chat-container.no-background {
-  background: transparent;
+  background-color: transparent;
+  
 }
 
 .chat-header {
@@ -34,6 +35,14 @@
   cursor: pointer;
   transition: transform 0.3s ease;
   border-radius: 2vh;
+}
+
+.logo {
+  filter:drop-shadow(20px 20px 20px #000000);
+}
+
+.transparent-image{
+  opacity: 0%;
 }
 
 .chat-option:hover {
@@ -62,6 +71,15 @@
   max-width: 50vw; /* Adjust max-width using vw */
   margin-bottom: 4vh; /* Adjust margin using vh */
 }
+.prompt-input:hover , .prompt-input:focus {
+  outline: none;
+  background-color: #ffff;
+  box-shadow: 0 0 0 2px #5cb85c;
+  transform: scale(1.1) translateX(-15px);
+  transition: ease-in-out 0.3s;
+
+  
+}
 
 .submit-button {
   padding: 2vh 3vh; /* Adjust padding using vh */
@@ -70,9 +88,10 @@
   background-color: #5cb85c !important;
   color: white;
   cursor: pointer;
-  width: 30vw; /* Adjust width using vw */
-  max-width: 60vw; /* Adjust max-width using vw */
-  border-radius: 2vh;
+  border-radius: 8px;
+  margin-left: 10px;
+  
+
 }
 
 .submit-button:hover {
