--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,38 @@ button {
 button:hover {
   opacity: 90%;
 }
+.getAdvice
+{
+  background-color: #646cff;
+  color: white;
+  font-size: 1.2em;
+  padding: 0.8em 1.6em;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+  font-family: inherit;
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+}
+.setting, .title {
+  color: white;
+}
+
+
+.assistant {
+  background-image: url(./assets/bg-assistant2.png);
+  background-size: cover;
+
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+  }
+
 
 @media (prefers-color-scheme: light) {
   :root {
