--- a/src/components/wiki-page/Chatbot.css
+++ b/src/components/wiki-page/Chatbot.css
@@ -65,7 +65,8 @@
   padding: 2vh; 
   font-size: 2.5vh; 
   border-radius: 2vh;
-  background-color: rgb(96, 101, 101);
+  background-color: rgba(255, 255, 255, 0.46);
+  backdrop-filter: blur(10px);
   border: 1px solid #242424;
   width: 50vw; /* Adjust width using vw */
   max-width: 50vw; /* Adjust max-width using vw */
@@ -73,7 +74,7 @@
 }
 .prompt-input:hover , .prompt-input:focus {
   outline: none;
-  background-color: #ffff;
+  backdrop-filter: blur(10px);
   box-shadow: 0 0 0 2px #5cb85c;
   transform: scale(1.1) translateX(-15px);
   transition: ease-in-out 0.3s;
