--- a/src/components/wiki-page/Chatbot.css
+++ b/src/components/wiki-page/Chatbot.css
@@ -7,11 +7,11 @@
   justify-content: center;
   background-image: url(../../assets/wiki.png);
   background-size: cover;
+  padding-bottom: 20vh; 
 }
 
 .chat-container.no-background {
   background-color: transparent;
-  
 }
 
 .chat-header {
@@ -70,9 +70,9 @@
   background-color: rgba(255, 255, 255, 0.46);
   backdrop-filter: blur(10px);
   border: 1px solid #242424;
-  width: 50vw; /* Adjust width using vw */
-  max-width: 50vw; /* Adjust max-width using vw */
-  margin-bottom: 4vh; /* Adjust margin using vh */
+  width: 50vw; 
+  max-width: 50vw; 
+  margin-bottom: 4vh; 
 }
 
 .prompt-input:hover , .prompt-input:focus {
